# protobuf-data-generator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: api_reference.md  constraint_systems.md  examples.md  quickstart.md
examples/: basic_usage.py  custom_constraints.py  nanopb_example.py  protovalidate_example.py
src/protobuf_test_generator/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_constraints.py  test_formatters.py  test_generator.py  test_parser.py  test_showcase.py
tests/fixtures/: invalid.proto  showcase.proto  test_basic.proto  test_nanopb.proto  test_protovalidate.proto  validate.proto
tests/integration/: test_nanopb_integration.py  test_protovalidate_integration.py
