[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protobuf-data-generator"
version = "1.0.0"
description = "A Python package for generating valid and invalid protobuf test data."
authors = ["Ofek Almog <ofekalm100@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/OfekiAlm/protobuf-data-generator"
repository = "https://github.com/OfekiAlm/protobuf-data-generator"
documentation = "https://github.com/OfekiAlm/protobuf-data-generator#readme"
keywords = ["protobuf", "test data", "data generator", "nanopb", "validation"]

packages = [
	{ include = "protobuf_test_generator", from = "src" }
]

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/OfekiAlm/protobuf-data-generator/issues"
"Source" = "https://github.com/OfekiAlm/protobuf-data-generator"

[tool.poetry.dependencies]
python = "^3.7"
protobuf = "^3.19.0"
grpcio-tools = "^1.43.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"

[build]
source = ["src"]